--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,42 @@
 ---
-layout: page
-title: About
-permalink: /about/
 ---
 
-<body>
-  {% include custom-header.html %}
-  <h1>About Me</h1>
-  <p>I'm Jim, a DevSecOps engineer with over 10 years in software and security engineering. I specialize in:</p>
-  <ul>
-    <li>CI/CD security automation</li>
-    <li>Cloud-native infrastructure hardening</li>
-    <li>Threat modeling and vulnerability management</li>
-  </ul>
-  <p>Currently building a portfolio of security tools and writing about lessons learned from the field.</p>
-</body>
+<!doctype html>
+<!--
+  Minimal Mistakes Jekyll Theme 4.24.0 by Michael Rose
+  Copyright 2013-2020 Michael Rose - mademistakes.com | @mmistakes
+  Free for personal and commercial use under the MIT license
+  https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
+-->
+<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+  <head>
+    {% include head.html %}
+    {% include head/custom.html %}
+  </head>
+
+  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+    {% include_cached skip-links.html %}
+    {% include_cached browser-upgrade.html %}
+    {% include_cached masthead.html %}
+
+    <div class="initial-content">
+      {{ content }}
+    </div>
+
+    {% if site.search == true %}
+      <div class="search-content">
+        {% include_cached search/search_form.html %}
+      </div>
+    {% endif %}
+
+    <div id="footer" class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+        {% include_cached footer.html %}
+      </footer>
+    </div>
+
+    {% include scripts.html %}
+
+  </body>
+</html>
